# mini-apple-debugger

./: .crutch.json  .gitmodules  CMakeLists.txt  README.md
include/MAD/: Breakpoint.hpp  Breakpoints.hpp  BreakpointsControl.hpp  Debug.hpp  Debugger.hpp  Error.hpp  Mach.hpp  MachImage.hpp  MachMemory.hpp  MachMemoryRegion.hpp  MachOParser.hpp  MachProcess.hpp  MachTask.hpp  MachTaskMemoryStream.hpp  MachThread.hpp  ObjectFile.hpp  Prompt.hpp  SymbolTable.hpp  UniversalBinary.hpp  Utils.hpp
src/: CMakeLists.txt  Main.cpp
src/MAD/: Breakpoint.cpp  Breakpoints.cpp  BreakpointsControl.cpp  Debug.cpp  Debugger.cpp  MachMemory.cpp  MachMemoryRegion.cpp  MachProcess.mm  MachTask.cpp  MachThread.cpp  ObjectFile.cpp  Prompt.cpp  UniversalBinary.cpp
test/: CMakeLists.txt
test/Debugger/: CMakeLists.txt  test.cpp
test/hello/: hello.cpp  hello.s  hello_short.s
